--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 .closebtn:hover {
   color: black;
 }
+h1 {
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -32,4 +35,25 @@
 </div>
 
 </body>
+<h1>Orders</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
