--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1 {
 
 </body>
 <h1>Orders</h1>
-<img src="/Orders/num1.jpg" alt="Smiley Braclet With pink beads.">
+<img src="/Orders/Num1.jpg" alt="Smiley Braclet With pink beads.">
 
 
 
