--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1 {
 
 </body>
 <h1>Orders</h1>
-<img src="<img src="./Orders/num1.jpg" alt="lasagna">" alt="Smiley Braclet With pink beads!!!!!!!!!!!!">
+<img src="<img src="./Orders/num1.jpg" alt="lasagna">" 
 
 
 
