--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1 {
 
 </body>
 <h1>Orders</h1>
-<img src="/docs/assets/num1.img" alt="lasagna">
+<img src="/docs/assets/num1.img" alt="blob">
 
 
 
