--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
 h1 {
   text-align: center;
 }
+.wave {
+  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s;        /* Change to speed up or slow down */
+  animation-iteration-count: infinite;  /* Never stop waving :) */
+  transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+    0% { transform: rotate( 0.0deg) }
+   10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+   20% { transform: rotate(-8.0deg) }
+   30% { transform: rotate(14.0deg) }
+   40% { transform: rotate(-4.0deg) }
+   50% { transform: rotate(10.0deg) }
+   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+  100% { transform: rotate( 0.0deg) }
+}
+
 </style>
 </head>
 <body>
@@ -36,6 +55,8 @@ h1 {
 
 </body>
 <h1>Orders</h1>
+<span class="wave">👋</span>
+
 <p>ERR_1 = SHUT DOWN SHOP FOR NOW.  </p>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQbPCf1aHSJ6D3AePeEtBLAFSLYQGgs4UENIRvvl08HmqAUw/viewform?embedded=true" width="640" height="874" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
