added one social

--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_3" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Menu 3 text Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae nesciunt, exercitationem quaerat maxime non!</p>
+          <p>Hi Im Ethan Here Are some Of My Social Links</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Menu 3 Small Item</button>
           </a>
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="https://github.com/EthanAnaya/" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Menu 3 Small Item</button>
           </a>
         </div>
