--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 3 Small Item</button>
+          <a class="main_small_a_item" href="https://fluffy-sand-bat.glitch.me/" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Ultra-Violet-Proxy</button>
           </a>
           <a class="main_small_a_item" href="https://github.com/EthanAnaya/" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 3 Small Item</button>
+            <button class="main_small_button_item">🐈‍⬛Github</button>
           </a>
         </div>
         <!-- Menu Small Item -->
