--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>links-website</title>
+    <title>Ethan's Website</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -27,8 +27,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/logo.png" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1>Your Title</h1>
-        <h2>Your Description</h2>
+        <h1>Ethan Anaya</h1>
+        <h2>🎉 This Website was Made by Ethan Anaya a 11 Year Old Kid! 🎉</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
