majour update once again!

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 1 Small Item</button>
+          <a class="main_small_a_item" href="order.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">ORDERS (SCHOOLMATES ONLY!)</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Menu 1 Small Item</button>
@@ -193,7 +193,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <footer>
       <!-- Footer Codes Start -->
       <div class="footer_div_item flex_row_center">
-        <a class="footer_a_item" href="#link">Your Name</a>&nbsp;| Copyright Text
+        <a class="footer_a_item" href="#link">Ethan Anaya</a>&nbsp;| ☻
       </div>
     </footer>
       <!-- Footer Codes End -->
