--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#order.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="orders.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">ORDERS (SCHOOLMATES ONLY!!!)</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
