--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         opacity: 1;
         transition: opacity 0.6s; /* 600ms to fade out */
       }
-      /* The alert message box */
+      /* The alert message box css */
 .alert {
   padding: 20px;
   background-color: #f44336; /* Red */
@@ -73,6 +73,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </script>
   </head>
   <body>
+  /* ALERT BOX */
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
      Beta Mode Enabled.  ~ Bugs May Occur.
@@ -138,39 +139,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <!-- Menu Container 1 Codes End -->
 
       <!-- Menu Container 2 Codes Start -->
-      <section id="main_section_container_2" class="flex_column_center">
-        <!-- Menu Text Item -->
-        <div class="main_text_item">
-          <p>Menu 2 text Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae nesciunt, exercitationem quaerat maxime non!</p>
-        </div>
-        <!-- Menu Small Item -->
-        <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 2 Small Item</button>
-          </a>
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 2 Small Item</button>
-          </a>
-        </div>
-        <!-- Menu Small Item -->
-        <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 2 Small Item</button>
-          </a>
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 2 Small Item</button>
-          </a>
-        </div>
-        <!-- Menu Item -->
-        <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">Menu 2 Item</button>
-        </a>
-        <!-- Menu Item -->
-        <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">Menu 2 Item</button>
-        </a>
-      </section>
-      <!-- Menu Container 2 Codes End -->
+      <!-- END -->
 
       <!-- Menu Container 3 Codes Start -->
       <section id="main_section_container_3" class="flex_column_center">
