--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_3" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Hi Im Ethan Here Are some Of My Social Links</p>
+          <p>Here Are Some Of My Links To My Coding Pages! </p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
@@ -192,7 +192,7 @@ https://github.com/ardacarofficial/links-website is open source project.
             <button class="main_small_button_item">Replit IDE</button>
           </a>
           <a class="main_small_a_item" href="https://glitch.com/@ethananaya7098" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Glich</button>
+            <button class="main_small_button_item">Glitch</button>
           </a>
         </div>
         <!-- Menu Item -->
