--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@ https://github.com/ardacarofficial/links-website is open source project.
     <!-- Logo, Title and Description Codes End -->  
 
     <!-- Social Media Icons Codes Start -->
+    <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      </head>
     <!-- Social Media Icons Codes End -->
 
     <!-- Menu Codes Start -->
