--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ https://github.com/ardacarofficial/links-website is open source project.
             <button class="main_small_button_item">ORDERS (SCHOOLMATES ONLY!!!)</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 1 Small Item</button>
+            <button class="main_small_button_item"></button>
           </a>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 1 Small Item</button>
+          <a class="main_small_a_item" href="password.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Passowrd</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Menu 1 Small Item</button>
