--- a/password.html
+++ b/password.html
@@ -17,7 +17,7 @@
 		function showProtectedText() {
 			var password = document.getElementById("password").value;
 			if (password == "qwerty") {
-				document.getElementById("protected-text").style.display = "block";
+				document.getElementById("life sucks.").style.display = "block";
 			} else {
 				alert("Incorrect password. Please try again.");
 			}
