--- a/password.html
+++ b/password.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Password-Protected Text Example</title>
+	<title>ERR_1</title>
 </head>
 <body>
 
 	<fieldset>
 		<legend>Enter Password to View Protected Text:</legend>
 		<input type="password" id="password">
-		<p id="protected-text" style="display:none;">This text is protected.</p>
+		<p id="protected-text" style="display:none;">Life Sucks</p>
 	</fieldset>
 
 	<button onclick="showProtectedText()">Submit</button>
@@ -17,7 +17,7 @@
 		function showProtectedText() {
 			var password = document.getElementById("password").value;
 			if (password == "qwerty") {
-				document.getElementById("life sucks.").style.display = "block";
+				document.getElementById("protected-text").style.display = "block";
 			} else {
 				alert("Incorrect password. Please try again.");
 			}
