--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="password.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Passowrd</button>
+          <a class="main_small_a_item" href="#ERR_1" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">UNKNOWN</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Menu 1 Small Item</button>
