--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://github.com/ardacarofficial/links-website is open source project.
   <body>
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    SCROLL DOWN!
+    Beta Mode ~ errors may occour
     </div>
     <header>
     <!-- Logo, Title and Description Codes Start -->
