--- a/password.html
+++ b/password.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ERR_1</title>
+	<title>Password Protected Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-	<fieldset>
-		<legend>Enter Password to View Protected Text:</legend>
-		<input type="password" id="password">
-		<p id="protected-text" style="display:none;">Life Sucks</p>
-	</fieldset>
-
-	<button onclick="showProtectedText()">Submit</button>
-
-	<script>
-		function showProtectedText() {
-			var password = document.getElementById("password").value;
-			if (password == "qwerty") {
-				document.getElementById("protected-text").style.display = "block";
-			} else {
-				alert("Incorrect password. Please try again.");
-			}
-		}
-	</script>
-
+	<div class="container">
+		<h2>Please enter the password to view the content:</h2>
+		<form id="password-form" onsubmit="validatePassword()">
+			<input type="password" id="password-input" placeholder="Password">
+			<input type="submit" id="submit-button" value="Submit">
+		</form>
+	</div>
+	<script src="app.js"></script>
 </body>
 </html>
