--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@ https://github.com/ardacarofficial/links-website is open source project.
       <div class="header_text flex_column_center">
         <h1>Ethan Anaya</h1>
         <h2>🎉 This Website was Made by Ethan Anaya a 11 Year Old Kid! 🎉</h2>
-	<iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:120px;height:40px;"src="https://www.clocklink.com/html5embed.php?clock=004&timezone=PST&color=green&size=120&Title=&Message=&Target=&From=2023,1,1,0,0,0&Color=green"></iframe>
+	<head>
+      <link rel="stylesheet" href="index.css">
+   </head>
+   <body>
+      <div>
+         <div style="color: white;">The Time is: </div>
+         <div id="Clock" class="glow">00:00:00</div>
+      </div>
+      <script src= index.js></script>
+   </body>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
