--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://github.com/ardacarofficial/links-website is open source project.
    </head>
    <body>
       <div>
-         <div style="color: white;">The Time is: </div>
+         <div style="color: white;"></div>
          <div id="Clock" class="glow">00:00:00</div>
       </div>
       <script src= index.js></script>
