--- a/index.html
+++ b/index.html
@@ -178,9 +178,6 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Menu 2 Item</button>
         </a>
         <!-- Menu Item -->
-        <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">Menu 2 Item</button>
-        </a>
       </section>
       <!-- Menu Container 2 Codes End -->
 
@@ -192,7 +189,7 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://fluffy-sand-bat.glitch.me/" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="password.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Ultra-Violet-Proxy</button>
           </a>
           <a class="main_small_a_item" href="https://github.com/EthanAnaya/" target="_blank" rel="nofollow">
