--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
------------------
-https://github.com/ardacarofficial/links-website is open source project.
------------------
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -118,7 +112,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Menu 1 text Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae nesciunt, exercitationem quaerat maxime non!</p>
+          <p>Some Random stuff for school! 📚</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
