--- a/password.html
+++ b/password.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Password Protected Page</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Password-protected Hidden Text</title>
+	<style>
+		#hidden-text {
+			display: none;
+		}
+	</style>
 </head>
 <body>
-	<div class="container">
-		<h2>Please enter the password to view the content:</h2>
-		<form id="password-form" onsubmit="validatePassword()">
-			<input type="password" id="password-input" placeholder="Password">
-			<input type="submit" id="submit-button" value="Submit">
-		</form>
+	<h1>Password-protected Hidden Text</h1>
+	<p>Enter the password to reveal the link:</p>
+	<input type="password" id="password-field">
+	<button onclick="revealText()">Submit</button>
+	<div id="hidden-text">
+  		<p>Link To the website <a href="https://fluffy-sand-bat.glitch.me/">link text</a></p>
 	</div>
-	<script src="app.js"></script>
+	<script>
+		function revealText() {
+		  var password = document.getElementById("password-field").value;
+		  if (password === "myPassword") {
+		    document.getElementById("hidden-text").style.display = "block";
+		  }
+		}
+	</script>
 </body>
 </html>
