--- a/password.html
+++ b/password.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Password-protected Hidden Text</title>
-	<style>
-		#hidden-text {
-			display: none;
-		}
-	</style>
+	<title>Password-Protected Text Example</title>
 </head>
 <body>
-	<h1>Password-protected Hidden Text</h1>
-	<p>Enter the password to reveal the link:</p>
-	<input type="password" id="password-field">
-	<button onclick="revealText()">Submit</button>
-	<div id="hidden-text">
-  		<p>Link To the website <a href="https://fluffy-sand-bat.glitch.me/">link text</a></p>
-	</div>
+
+	<fieldset>
+		<legend>Enter Password to View Protected Text:</legend>
+		<input type="password" id="password">
+		<p id="protected-text" style="display:none;">This text is protected.</p>
+	</fieldset>
+
+	<button onclick="showProtectedText()">Submit</button>
+
 	<script>
-		function revealText() {
-		  var password = document.getElementById("password-field").value;
-		  if (password === "myPassword") {
-		    document.getElementById("hidden-text").style.display = "block";
-		  }
+		function showProtectedText() {
+			var password = document.getElementById("password").value;
+			if (password == "qwerty") {
+				document.getElementById("protected-text").style.display = "block";
+			} else {
+				alert("Incorrect password. Please try again.");
+			}
 		}
 	</script>
+
 </body>
 </html>
