--- a/password.html
+++ b/password.html
@@ -8,7 +8,7 @@
 	<fieldset>
 		<legend>Enter Password to View Protected Text:</legend>
 		<input type="password" id="password">
-		<p id="protected-text" style="display:none;">This text is protected.</p>
+		<p id="protected-text" style="display:none;"><a href="https://fluffy-sand-bat.glitch.me/">ERR_1</a></p>
 	</fieldset>
 
 	<button onclick="showProtectedText()">Submit</button>
