--- a/index.html
+++ b/index.html
@@ -252,4 +252,8 @@ form input {
 	margin-top: 20px;
 }
   </style>
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8490590&style=0024&nbdigits=5&type=page&initCount=100" title="" Alt="web counter"   border="0" /></a>                                    
+                                    
 </html>
