--- a/abced.html
+++ b/abced.html
@@ -19,7 +19,7 @@ var page = new ABC({
 })
 //Set the type
 page.setType("blank")
-//Set the url
+//blocked lollz
 page.setUrl("https://v4.wiki")
 //Get iframe code
 console.log(page.getCode())
