--- a/abced.html
+++ b/abced.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>ABC Alphabet!</title>
+<title>A:BC Demo</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/gh/FogNetwork/ABC/index.js"></script>
 </head>
 <body>
-
+<center>
 
 <h1 class="title">this is blocked lol</h1>
 
@@ -17,11 +17,11 @@ var page = new ABC({
     "type": "blank", //Blank, blob, or overwrite
     "url": "https://example.com" //Any url
 })
-//Set the type
+//set 
 page.setType("blank")
-//blocked lollz
+//Set the alt website lolz
 page.setUrl("https://v4.wiki")
-//Get iframe code
+//cool kid
 console.log(page.getCode())
 //Open page
 page.open()</textarea>
@@ -29,7 +29,7 @@ page.open()</textarea>
 <br>
 
 <button class="run" onclick="eval(document.getElementById('code').value)">Run</button>
-
+</center>
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
