--- a/abced.html
+++ b/abced.html
@@ -10,18 +10,18 @@
 <body>
 <center>
 
-<h1 class="title">this is blocked lol</h1>
-
+<h1 class="title">A:BC Demo</h1>
+<textarea id="code" spellcheck="false">
 //Creates new ABC
 var page = new ABC({
     "type": "blank", //Blank, blob, or overwrite
     "url": "https://example.com" //Any url
 })
-//set 
+//Set the type
 page.setType("blank")
-//Set the alt website lolz
+//Set the url
 page.setUrl("https://v4.wiki")
-//cool kid
+//Get iframe code
 console.log(page.getCode())
 //Open page
 page.open()</textarea>
