--- a/abced.html
+++ b/abced.html
@@ -15,7 +15,7 @@
 //Creates new ABC
 var page = new ABC({
     "type": "blank", //Blank, blob, or overwrite
-    "url": "https://example.com" //Any url
+    "url":   <input type="Stuff" id="fname" name="fname"><br> //Any url
 })
 //Set the type
 page.setType("blank")
