--- a/abced.html
+++ b/abced.html
@@ -15,12 +15,12 @@
 //Creates new ABC
 var page = new ABC({
     "type": "blank", //Blank, blob, or overwrite
-    "url":   <input type="Stuff" id="fname" name="fname"><br> //Any url
+    "url": "https://example.com" //Any url
 })
 //Set the type
 page.setType("blank")
 //Set the url
-page.setUrl("https://v4.wiki")
+page.setUrl("https://google.com")
 //Get iframe code
 console.log(page.getCode())
 //Open page
