--- a/abced.html
+++ b/abced.html
@@ -20,7 +20,7 @@ var page = new ABC({
 //Set the type
 page.setType("blank")
 //Set the url
-page.setUrl("https://google.com")
+page.setUrl("https://historicalanime.org/")
 //Get iframe code
 console.log(page.getCode())
 //Open page
