--- a/abced.html
+++ b/abced.html
@@ -11,20 +11,7 @@
 <center>
 
 <h1 class="title">A:BC Demo</h1>
-<textarea id="code" spellcheck="false">
-//Creates new ABC
-var page = new ABC({
-    "type": "blank", //Blank, blob, or overwrite
-    "url": "https://example.com" //Any url
-})
-//Set the type
-page.setType("blank")
-//Set the url
-page.setUrl("https://historicalanime.org/")
-//Get iframe code
-console.log(page.getCode())
-//Open page
-page.open()</textarea>
+<script></script>
 
 <br>
 
