--- a/abced.html
+++ b/abced.html
@@ -11,7 +11,7 @@
 <center>
 
 <h1 class="title">A:BC Demo</h1>
-<script></script>
+<button class="button"><script>index.js</script></button><script></script>
 
 <br>
 
