--- a/abced.html
+++ b/abced.html
@@ -66,6 +66,18 @@ background: transparent;
 border: 2px solid #656c6f;
 border-radius: 2.5px;
 }
+ .button {
+  background-color: #ddd;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
 </style>
 
 </body>
