--- a/abced.html
+++ b/abced.html
@@ -11,7 +11,12 @@
 <center>
 
 <h1 class="title">A:BC Demo</h1>
-<button class="button"><script>index.js</script></button><script></script>
+ <input type="button" value="ERR_1" onclick="addItem();"/>
+<script>
+  function addItem() {
+   alert("Hire security team!");
+  }
+</script>
 
 <br>
 
