--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="orders.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="error301.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">ORDERS (SCHOOLMATES ONLY!!!)</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
