--- a/index.html
+++ b/index.html
@@ -87,10 +87,47 @@
          <div style="color: white;"></div>
          <div id="Clock" class="glow">00:00:00</div>
       </div>
-      <script src= index.js></script>
+<!-- SCRIPT TIME START -->
+      <script>setInterval(displayTime, 1000);
+
+function displayTime() {
+
+    const timeNow = new Date();
+
+    let hoursOfDay = timeNow.getHours();
+    let minutes = timeNow.getMinutes();
+    let seconds = timeNow.getSeconds();
+    let weekDay = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+    let today = weekDay[timeNow.getDay()];
+    let months = timeNow.toLocaleString("default", {
+        month: "long"
+    });
+    let year = timeNow.getFullYear();
+    let period = "AM";
+
+    if (hoursOfDay > 12) {
+        hoursOfDay-= 12;
+        period = "PM";
+    }
+
+    if (hoursOfDay === 0) {
+        hoursOfDay = 12;
+        period = "AM";
+    }
+
+    hoursOfDay = hoursOfDay < 10 ? "0" + hoursOfDay : hoursOfDay;
+    minutes = minutes < 10 ? "0" + minutes : minutes;
+    seconds = seconds < 10 ? "0" + seconds : seconds;
+
+    let time = hoursOfDay + ":" + minutes + ":" + seconds + period;
+
+    document.getElementById('Clock').innerHTML = time + " " + today + " " + months + " " + year;
+
+}
+displayTime();</script>
    </body>
       </div>
-    <!-- Logo, Title and Description Codes End -->  
+    <!-- SCRIPT TIME ENDS -->  
 
     <!-- Social Media Icons Codes Start -->
     <head>
