--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ displayTime();</script>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
           <a class="main_small_a_item" href="error301.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">ORDERS (SCHOOLMATES ONLY!!!)</button>
+            <button class="main_small_button_item">Nothing Lolz</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item"></button>
@@ -162,20 +162,15 @@ displayTime();</script>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="#ERR_1" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">UNKNOWN</button>
+          <a class="main_small_a_item" href="error301.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Nothing Yet!</button>
           </a>
-          <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Menu 1 Small Item</button>
+          <a class="main_small_a_item" href="error301.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">nothing yet!</button>
           </a>
         </div>
         <!-- Menu Item -->
-        <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">Menu 1 Item</button>
-        </a>
-        <!-- Menu Item -->
-        <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">Menu 1 Item</button>
+        <
         </a>
       </section>
       <!-- Menu Container 1 Codes End -->
@@ -184,7 +179,7 @@ displayTime();</script>
       <section id="main_section_container_2" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Menu 2 text Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae nesciunt, exercitationem quaerat maxime non!</p>
+          <p>Uh Oh Nothing Here! Check out Coding Page</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
