--- a/error301.html
+++ b/error301.html
@@ -1,2 +1,8 @@
-<h1><strong>ERR_301</strong><h1>
-<div>a unknown error has occurred.</div>
+<head>
+<meta name="color-scheme" content="light dark">
+</head>
+<body>
+<pre style="word-wrap: break-word; white-space: pre-wrap;">404 page not found
+</pre>
+</body>
+  <p>an uknown page has been requested! While your waiting check out the home menu?</p>
