--- a/error301.html
+++ b/error301.html
@@ -5,4 +5,4 @@
 <pre style="word-wrap: break-word; white-space: pre-wrap;">404 page not found
 </pre>
 </body>
-  <p>an uknown page has been requested! While your waiting check out the home menu?</p>
+  <p>an uknown page has been requested! While your waiting check out the <a href="https://ethananaya.github.io/">home</a> menu?</p>
