--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ displayTime();</script>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="password.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="error3O1.html" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Ultra-Violet-Proxy</button>
           </a>
           <a class="main_small_a_item" href="https://github.com/EthanAnaya/" target="_blank" rel="nofollow">
