--- a/ethananaya1234.github.io-main/qwerty.html
+++ b/ethananaya1234.github.io-main/qwerty.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" type="image/png" href="images/uw.png" sizes="16x16">
-    <script src="./js/index.js"></script>
+    <script src="./js/code.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/click.js"></script>
     <script src="./js/custombuttons.js"></script>
