Update and rename Hype/index.html to hype.html

--- a/hype.html
+++ b/hype.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
 
-    <script src="/index.js"></script>
+    <script src="/app.js"></script>
 
     <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
 
