--- a/game/games.html
+++ b/game/games.html
@@ -1,3 +1,5 @@
 <div>games</div>
 <a href="chess/chess.html">Chess</a>
 <a href="checkers/checkers.html">Checkers</a>
+<a href="defender/index.html">Defender</a>
+
