--- a/password.html
+++ b/password.html
@@ -16,7 +16,7 @@
 	<script>
 		function showProtectedText() {
 			var password = document.getElementById("password").value;
-			if (password == "qwerty") {
+			if (password == "abc") {
 				document.getElementById("protected-text").style.display = "block";
 			} else {
 				alert("Incorrect password. Please try again.");
