--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/imgs/inaya_pfp.gif">
     
     <!-- Title -->
-    <title>🌴 ・ Inaya</title>
+    <title>🌴 ・ Ethan</title>
 
     <!-- Css -->
     <link rel="stylesheet" href="assets/css/style.css">
