--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/imgs/inaya_pfp.gif">
+    <link rel="icon" href="img/inaya_pfp.gif">
     
     <!-- Title -->
     <title>🌴 ・ Ethan</title>
 
     <!-- Css -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Javascript -->
     
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <div class="header_logo">
-                <img src="assets/imgs/inaya_pfp.gif" alt="" srcset="">
+                <img src="img/inaya_pfp.gif" alt="" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
@@ -37,7 +37,7 @@
     </header>
 
     <section class="main">
-        <img src="assets/imgs/kaneki_pfp.gif" alt="" srcset="">
+        <img src="img/kaneki_pfp.gif" alt="" srcset="">
         <span>Kaneki Web</span>
         <p>15 years old, French & English developer.</p>
         <ul>
