--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/inaya_pfp.gif">
+    <link rel="icon" href="pfp.png">
     
     <!-- Title -->
-    <title>🌴 ・ Ethan</title>
+    <title>💻 ・ Ethan</title>
 
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <div class="header_logo">
-                <img src="img/inaya_pfp.gif" alt="" srcset="">
+                <img src="mountin.png" alt="" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
