--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <div class="header_logo">
-                <img src="mountin.png" alt="" srcset="">
+                <img src="img/mountin.png" alt="" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
@@ -37,13 +37,13 @@
     </header>
 
     <section class="main">
-        <img src="img/kaneki_pfp.gif" alt="" srcset="">
-        <span>Kaneki Web</span>
-        <p>15 years old, French & English developer.</p>
+        <img src="img/pfp.jpg" alt="" srcset="">
+        <span>Ethan Web</span>
+        <p>12 years old,  Web developer.</p>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
-            <li><a target="_blank" href="https://github.com/KanekiWeb"><i class="fab fa-github"></i></a></li>
-            <li><a target="_blank" href="https://www.youtube.com/channel/UC-XII5SSqbMOF1UX3N0Gl8g"><i class="fab fa-youtube"></i></a></li>
+            <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
+            <li><a target="_blank" href=""><i class="fab fa-youtube"></i></a></li>
         </ul>
     </section>
 
