--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <section class="main">
-        <img src="img/pfp.jpg" alt="" srcset="">
+        <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
         <p>12 years old,  Web developer.</p>
         <ul>
