--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
         <p>12 years old,  Web developer.</p>
+        <em>About me not finished 💀</em>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
