--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <header>
         <nav>
             <div class="header_logo">
-                <img src="img/mountin.png" alt="" srcset="">
+                <img src="img/mountin.png" alt="password abc" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
-                    <li class="nav_link"><a href="#">Home</a></li>
+                    <li class="nav_link"><a href="ethananaya.github.io">Home</a></li>
+                    <li class="nav_link"><a href="https://ethananaya.github.io/123456.html">Main Web</a></li>
                     <!-- <li class="nav_link"><a href="#">Shop</a></li> -->
                     <!-- <li class="nav_link"><a href="#">Repos</a></li> -->
                 </ul>
@@ -40,7 +41,7 @@
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
         <p>12 years old,  Web developer.</p>
-        <tt>About me not finished 💀</tt>
+        <tt>About me not finished...</tt>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
