--- a/error301.html
+++ b/error301.html
@@ -1,366 +1,221 @@
-/* Copyright 2011 Google Inc. All Rights Reserved. */
-(function() {
-    var e, k = function(a) {
-        return a.replace(/^\s+|\s+$/g, "")
-    }, t = function(a) {
-        if (a && a.tagName) {
-            var b = a.tagName.toLowerCase();
-            if ("input" === b || "textarea" === b)
-                return !0
-        }
-        if (document.designMode && "on" === document.designMode.toLowerCase())
-            return !0;
-        for (; a; a = a.parentNode)
-            if (a.isContentEditable)
-                return !0;
-        return !1
-    }, u = function(a, b) {
-        var c = new XMLHttpRequest;
-        c.open("GET", a, !0);
-        c.onload = function() {
-            var d = null;
-            200 === c.status && (d = c.response);
-            return b(d)
-        }
-        ;
-        c.send()
-    }, v = RegExp("[0-9A-Za-z]"), y = function() {
-        u(chrome.runtime.getURL("content.min.css"), function(a) {
-            var b = function(c) {
-                this.P = c.instanceId;
-                this.O = a;
-                c = document.createElement("div");
-                var d = document.createElement("a");
-                d.target = "_blank";
-                this.K = c.cloneNode(!1);
-                this.H = document.createElement("audio");
-                this.H.preload = !0;
-                this.l = c.cloneNode(!1);
-                this.l.id = "gdx-bubble-host";
-                this.J = this.l.attachShadow({
-                    mode: "open"
-                });
-                var g = document.createElement("style");
-                g.innerHTML = this.O;
-                this.J.appendChild(g);
-                this.g = c.cloneNode(!1);
-                this.g.id = "gdx-bubble-main";
-                this.J.appendChild(this.g);
-                this.j = c.cloneNode(!1);
-                this.j.id = "gdx-bubble-query-row";
-                this.I = c.cloneNode(!1);
-                this.I.id = "gdx-bubble-query";
-                this.o = c.cloneNode(!1);
-                this.o.id = "gdx-bubble-audio-icon";
-                this.j.appendChild(this.I);
-                this.j.appendChild(this.o);
-                this.u = c.cloneNode(!1);
-                this.u.id = "gdx-bubble-meaning";
-                this.i = c.cloneNode(!1);
-                this.i.id = "gdx-bubble-options-tip";
-                this.i.innerHTML = 'Tip: Didn\'t want this definition pop-up? Try setting a trigger key in <a href="#">Extension Options</a>.';
-                this.v = c.cloneNode(!1);
-                this.v.id = "gdx-bubble-more";
-                this.m = d.cloneNode(!1);
-                this.v.appendChild(this.m);
-                this.h = c.cloneNode(!1);
-                this.h.id = "gdx-bubble-attribution";
-                this.B = d.cloneNode(!1);
-                this.D = c.cloneNode(!1);
-                this.h.appendChild(this.B);
-                this.h.appendChild(this.D);
-                this.F = c.cloneNode(!1);
-                this.F.id = "gdx-bubble-close";
-                this.g.appendChild(this.F);
-                this.g.appendChild(this.j);
-                this.g.appendChild(this.u);
-                this.g.appendChild(this.i);
-                this.g.appendChild(this.h);
-                this.g.appendChild(this.v);
-                this.G = c.cloneNode(!1);
-                this.J.appendChild(this.G);
-                this.N = w(c, "up");
-                this.M = w(c, "down");
-                x(this)
-            }
-            .bind(this);
-            chrome.runtime.sendMessage({
-                type: "initialize"
-            }, b)
-        }
-        .bind(this))
-    }, x = function(a) {
-        a.L = a.T.bind(a);
-        window.addEventListener("resize", a.s.bind(a));
-        document.addEventListener("mouseup", a.V.bind(a));
-        document.addEventListener("dblclick", a.R.bind(a));
-        document.addEventListener("keydown", a.U.bind(a));
-        a.F.onclick = a.s.bind(a);
-        a.o.onclick = function() {
-            this.H.play()
-        }
-        .bind(a);
-        a.i.querySelector("a").onclick = function() {
-            chrome.runtime.sendMessage({
-                type: "openOptionsPage"
-            }, function() {});
-            return !1
-        }
-        ;
-        var b = function(c) {
-            c.preventDefault();
-            c.stopPropagation()
-        };
-        a.o.onmousedown = b;
-        a.F.onmousedown = b;
-        chrome.runtime.onMessage.addListener(C);
-        chrome.runtime.onMessage.addListener(a.L)
-    }, w = function(a, b) {
-        var c = a.cloneNode(!1)
-          , d = a.cloneNode(!1);
-        a = a.cloneNode(!1);
-        c.id = "gdx-arrow-main";
-        "up" === b ? (d.id = "gdx-bubble-arrow-inner-up",
-        a.id = "gdx-bubble-arrow-outer-up") : (d.id = "gdx-bubble-arrow-inner-down",
-        a.id = "gdx-bubble-arrow-outer-down");
-        c.appendChild(d);
-        c.appendChild(a);
-        return c
-    }, E = function(a) {
-        a.g.style.left = "0";
-        a.g.style.top = "0";
-        var b = a.g.offsetWidth
-          , c = a.g.offsetHeight
-          , d = [window.pageXOffset, window.pageYOffset]
-          , g = d[0]
-          , f = [a.A.left + g, a.A.top + d[1]]
-          , n = a.A.bottom - a.A.top
-          , z = f[0] + (a.A.right - a.A.left) / 2;
-        d = g + document.documentElement.offsetWidth;
-        var l = z - b / 2;
-        l + b > d && (l = d - b);
-        l < g && (l = g);
-        var r = f[1] - c - 12 + 1
-          , m = f[1] + n + 12 - 1;
-        a: if (b = new D(r,l + b,r + c,l),
-        b.top < window.pageYOffset)
-            b = !1;
-        else {
-            c = document.getElementsByTagName("embed");
-            var A = document.getElementsByTagName("object")
-              , p = [window.pageXOffset, window.pageYOffset]
-              , B = p[0];
-            p = p[1];
-            for (var q = 0, L = c.length + A.length; q < L; q++) {
-                var h = (q < c.length ? c[q] : A[q - c.length]).getBoundingClientRect();
-                h = new D(h.top + p,h.right + B,h.bottom + p,h.left + B);
-                if (b.bottom > h.top && h.bottom > b.top && b.left < h.right && h.left < b.right) {
-                    b = !1;
-                    break a
-                }
-            }
-            b = !0
-        }
-        b ? (m = a.M,
-        m.style.top = f[1] - 12 + "px") : (r = m,
-        m = a.N,
-        m.style.top = f[1] + n + "px");
-        f = z - 12;
-        m.style.left = f + "px";
-        f - 5 > g && f + 24 + 5 < d && a.G.appendChild(m);
-        a.g.style.top = r + "px";
-        a.g.style.left = l + "px"
-    };
-    y.prototype.S = function(a) {
-        if (a.eventKey === this.C) {
-            this.s();
-            this.o.className = "display-none";
-            this.i.className = "display-none";
-            this.v.className = "";
-            this.h.className = "display-none";
-            if (a.meaningObj) {
-                var b = a.meaningObj;
-                this.j.className = "";
-                this.I.innerHTML = b.prettyQuery;
-                this.u.innerHTML = b.meaningText;
-                b.audio && (this.H.src = b.audio,
-                this.o.className = "");
-                this.m.href = b.moreUrl;
-                this.m.textContent = "More \u00bb";
-                b.attribution && ("translation" === b.type ? (this.D.innerHTML = b.attribution,
-                this.B.className = "display-none",
-                this.D.className = "") : (this.K.innerHTML = b.attribution,
-                b = this.K.getElementsByTagName("a")[0],
-                this.B.href = b.href,
-                this.B.innerHTML = b.innerHTML.replace("http://", ""),
-                this.B.className = "",
-                this.D.className = "display-none"),
-                this.h.className = "")
-            } else
-                this.j.className = "display-none",
-                this.u.textContent = "No definition found.",
-                this.m.href = "https://www.google.com/search?q=" + encodeURIComponent(a.sanitizedQuery),
-                this.m.innerHTML = 'Search the web for "' + a.sanitizedQuery + '" \u00bb';
-            a.showOptionsTip && (this.i.className = "");
-            document.documentElement.appendChild(this.l);
-            E(this)
-        }
-    }
-    ;
-    var F = function(a, b) {
-        b === a.C && (a.u.textContent = "Dictionary is disabled for https pages.",
-        a.m.href = "https://support.google.com/TODO",
-        a.m.textContent = "More information \u00bb",
-        a.v.className = "",
-        a.j.className = "display-none",
-        a.i.className = "display-none",
-        a.h.className = "display-none",
-        document.documentElement.appendChild(a.l),
-        E(a))
-    }
-      , G = function(a, b) {
-        b = b.getBoundingClientRect();
-        a.A = new D(b.top,b.right,b.bottom,b.left)
-    };
-    y.prototype.s = function() {
-        this.C++;
-        var a = this.l;
-        a && a.parentNode && a.parentNode.removeChild(a);
-        for (a = this.G; a && a.hasChildNodes(); )
-            a.removeChild(a.childNodes[0])
-    }
-    ;
-    y.prototype.U = function(a) {
-        27 === a.keyCode && this.s()
-    }
-    ;
-    var H = function(a, b) {
-        return "none" === b || "alt" === b && a.altKey || "ctrl" === b && (-1 !== window.navigator.platform.toLowerCase().indexOf("mac") ? a.metaKey : a.ctrlKey) || "shift" === b && a.shiftKey
-    }
-      , I = function(a, b) {
-        for (b = b.target; b; b = b.parentNode)
-            if (b === a.l)
-                return !0;
-        return !1
-    }
-      , K = function(a, b, c, d) {
-        if ("mouseup" === c)
-            var g = "true" === d.popupSelect && H(b, d.popupSelectKey);
-        else
-            "dblclick" === c ? g = "true" === d.popupSelect && H(b, d.popupSelectKey) ? !1 : "true" === d.popupDblclick && H(b, d.popupDblclickKey) : (console.warn("Unexpected eventType: " + c),
-            g = !1);
-        if (g) {
-            g = 0;
-            for (var f = J.length; g < f; g++)
-                if (location.href.match(J[g]))
-                    return;
-            if (!t(b.target)) {
-                g = null;
-                f = "";
-                if (window.getSelection) {
-                    f = window.getSelection();
-                    if (1 > f.rangeCount)
-                        return;
-                    g = f.getRangeAt(0);
-                    f = k(f.toString())
-                } else
-                    document.selection && (g = document.selection.createRange(),
-                    f = k(g.text));
-                if (!(!f || 1 === f.length && 127 >= f.charCodeAt(0) && !f.match(v) || "dblclick" === c && -1 !== f.indexOf(" "))) {
-                    a.C++;
-                    var n = a.C;
-                    I(a, b) || G(a, g);
-                    "false" === d.enableHttps && 0 === location.href.lastIndexOf("https", 0) ? F(a, n) : (window.setTimeout(function() {
-                        n === this.C && (this.u.textContent = "Searching...",
-                        this.j.className = "display-none",
-                        this.i.className = "display-none",
-                        this.v.className = "display-none",
-                        this.h.className = "display-none",
-                        document.documentElement.appendChild(this.l),
-                        E(this))
-                    }
-                    .bind(a), 300),
-                    chrome.runtime.sendMessage({
-                        type: "fetch_raw",
-                        eventKey: n,
-                        instanceId: a.P,
-                        query: f
-                    }, a.S.bind(a)))
-                }
-            }
-        }
-    };
-    y.prototype.V = function(a) {
-        I(this, a) || this.s();
-        var b = function(c) {
-            K(this, a, "mouseup", c.options)
-        }
-        .bind(this);
-        chrome.runtime.sendMessage({
-            type: "options"
-        }, b)
-    }
-    ;
-    y.prototype.R = function(a) {
-        var b = function(c) {
-            K(this, a, "dblclick", c.options)
-        }
-        .bind(this);
-        chrome.runtime.sendMessage({
-            type: "options"
-        }, b)
-    }
-    ;
-    var C = function(a, b, c) {
-        "get_selection" === a.type && (a = k(window.getSelection().toString())) && c({
-            selection: a
-        })
-    };
-    y.prototype.T = function(a) {
-        "hide" === a.type && a.instanceId === this.P && this.s()
-    }
-    ;
-    var J = [];
-    e = y.prototype;
-    e.O = "";
-    e.C = 0;
-    e.K = null;
-    e.H = null;
-    e.l = null;
-    e.J = null;
-    e.g = null;
-    e.j = null;
-    e.I = null;
-    e.o = null;
-    e.u = null;
-    e.i = null;
-    e.F = null;
-    e.v = null;
-    e.m = null;
-    e.h = null;
-    e.B = null;
-    e.D = null;
-    e.G = null;
-    e.N = null;
-    e.M = null;
-    e.A = null;
-    e.L = null;
-    var D = function(a, b, c, d) {
-        this.top = a;
-        this.right = b;
-        this.bottom = c;
-        this.left = d
-    }
-      , M = M || !1;
-    if (!M) {
-        if (window.gdxBubbleInstance) {
-            var N = window.gdxBubbleInstance;
-            chrome.runtime.onMessage.removeListener(C);
-            chrome.runtime.onMessage.removeListener(N.L);
-            N.s()
-        }
-        window.gdxBubbleInstance = new y
-    }
-    ;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="res/style.main.css">
+    <title>Awesome 404 Error Page Design - Vikas Kukreti</title>
+    <meta name="keywords" content="404, error, 404 error, 404 error page design, design, html, css, Vikas, Vikas kukreti" />
+	<meta name="description" content="Awesome 404 error page design for 404 errors including cool looks and animations with HTML and CSS only. Developed with love ❤ by Vikas Kukreti" />
+	
+</head>
+<body>
+    
+    <div id="particles" class="particles">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <main>
+        <section>
+            <h1>Page Not Found!</h1>
+            <div>
+                <span>4</span>
+                <span class="circle">0</span>
+                <span>4</span>
+            </div>
+            <p>We are unable to find the page<br>you're looking for.</p>
+            <div>
+                <button>Back to Home Page</button>
+            </div>
+        </section>
+    </main>
+
+</body>
+<style>
+* {
+    padding: 0;
+    margin: 0;
 }
-)();
+body {
+    background: radial-gradient( circle, rgb(28, 27, 90) 0%, rgb(15, 18, 44) 30%, rgb(15, 13, 31) 100%);
+    height: 100vh;
+    color: #efefef;
+}
+.particles {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+.particles span {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    display: block;
+    content: '';
+    width: 6px;
+    height: 6px;
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 0.5rem;
+    filter: blur(5px);
+
+}
+.particles span:nth-child(2) {
+    top: 15%;
+    left: 70%;
+    filter: blur(3px);
+}
+.particles span:nth-child(3) {
+    top: 70%;
+    left: 40%;
+    filter: blur(5px);
+}
+.particles span:nth-child(4) {
+    top: 52%;
+    left: 20%;
+    filter: blur(4px);
+}
+.particles span:nth-child(5) {
+    top: 74%;
+    left: 90%;
+    filter: blur(5px);
+}
+.particles span:nth-child(6) {
+    top: 85%;
+    left: 10%;
+    filter: blur(7px);
+}
+.particles span:nth-child(7) {
+    top: 67%;
+    left: 79%;
+    filter: blur(3px);
+}
+.particles span:nth-child(8) {
+    top: 48%;
+    left: 40%;
+    filter: blur(4px);
+}
+.particles span:nth-child(9) {
+    top: 45%;
+    left: 30%;
+    filter: blur(5px);
+}
+.particles span:nth-child(10) {
+    top: 96%;
+    left: 29%;
+    filter: blur(4px);
+}
+.particles span:nth-child(11) {
+    top: 55%;
+    left: 89%;
+    filter: blur(6px);
+}
+.particles span:nth-child(12) {
+    top: 55%;
+    left: 60%;
+    filter: blur(7px);
+}
+main {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: cursive;
+}
+main h1{
+    font-weight: normal;
+}
+main h1 {
+    text-align: center;
+    text-shadow: 0 0 5px #c3d168a2;
+}
+main div {
+    margin-top: 2rem;
+    text-align: center;
+}
+main div span{
+    font-size: 5rem;
+    line-height: 6rem;
+    text-shadow: 0 0 7px #c3d168a2;
+}
+.circle {
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    display: inline-block;
+    position: relative;
+    width: 6rem;
+    height: 6rem;
+    text-shadow: none;
+    background: #e6f1a3 radial-gradient(#f9ffd2, #ecff70);
+    color: rgba(0, 0, 0, 0);
+    border-radius: 50%;
+    box-shadow: 0 0 7px #e7f1a3a2;
+}
+.circle:after {
+    display: block;
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    width: 10rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 2px solid #fafafa;
+    border-top: 0px solid #fafafa;
+    border-bottom: 4px solid #fafafa;
+    z-index: 2
+}
+.circle:before {
+    display: block;
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    background: #124;
+    border-radius: 50%;
+    width: 4px;
+    height: 4px;
+    transform-origin: 2.5rem 0;
+    transform: translate(-2.5rem, 0) rotate(0deg);
+    animation: circle-around 5s infinite linear;
+}
+@keyframes circle-around {
+    0% { transform: translate(-2.5rem, 0) rotate(0deg); }
+    100% { transform: translate(-2.5rem, 0) rotate(360deg); }
+}
+main p {
+    margin-top: 3rem;
+    text-align: center;
+    text-shadow: 0 0 5px #c3d168a2;
+}
+main button {
+    padding: 0.55rem 1.2rem;
+    border: none;
+    outline: none;
+    appearance: none;
+    border-radius: 1rem;
+    background: rgb(17, 141, 44);
+    color: #fafafa;
+    box-shadow: 0 0 4px #e1f17859;
+}
+main button:hover {
+    cursor: pointer;
+}
+    </style>
+</html>
