--- a/error3O1.html
+++ b/error3O1.html
@@ -1,8 +1,50 @@
-<head>
-<meta name="color-scheme" content="light dark">
-</head>
-<body>
-<pre style="word-wrap: break-word; white-space: pre-wrap;">404 page not found
-</pre>
-</body>
-  <p>an uknown page has been requested! While your waiting check out the <a href="https://ethananaya.github.io/password.html">home</a> menu?</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>404 Err0r</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <style type="text/css">
+       {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+        outline: none;
+      }
+      body {
+        background-color: #2ca32c;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        display: flex;
+      }
+  
+      h1 {
+        font-size: 90px;
+        white-space: nowrap;
+        overflow: hidden;
+        animation: typewriter 2s steps(13) infinite alternate,
+          blink 800ms steps(13) infinite normal;
+        border-right: 5px solid black;
+      }
+      @keyframes typewriter {
+        from {
+          width: 0%;
+        }
+        to {
+          width: 50%;
+        }
+      }
+      @keyframes blink {
+        from {
+          border-color: black;
+        }
+        to {
+          border-color: transparent;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <h1>404 Err0r</h1>
+  </body>
+</html>
