--- a/main.html
+++ b/main.html
@@ -153,8 +153,8 @@ displayTime();</script>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="error301.html" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Nothing Lolz</button>
+          <a class="main_small_a_item" href="cheata.html" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Little Alchemy Cheats</button>
           </a>
           <a class="main_small_a_item" href="#link" target="_blank" rel="nofollow">
             <button class="main_small_button_item"></button>
