--- a/design.html
+++ b/design.html
@@ -40,7 +40,7 @@
     <section class="main">
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
-        <p>12 years old,  Web developer.</p>
+        <tt>12 years old,  Web developer.</tt>
         <tt>About me not finished...</tt>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
