--- a/design.html
+++ b/design.html
@@ -41,7 +41,7 @@
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
         <tt>12 years old,  Web developer.</tt>
-        <tt>About me not finished...</tt>
+        <p>About me not finished...</p>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
