--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <section class="main">
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan Web</span>
-        <tt>12 years old,  Web developer.</tt>
-        <p>About me not finished...</p>
+        <p>12 years old,  Web developer.</p>
+        <tt>About me not finished...</tt>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
