--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <link rel="icon" type="img/mountin.png" href="path-to-your-favicon"/>
+</head>
 
 <head>
     
