--- a/design.html
+++ b/design.html
@@ -29,7 +29,7 @@
             <div class="header_links">
                 <ul class="nav_links">
                     <li class="nav_link"><a href="ethananaya.github.io">Home</a></li>
-                    <li class="nav_link"><a href="https://ethananaya.github.io/main">Main Web</a></li>
+                    <li class="nav_link"><a href="https://ethananaya.github.io/design-process"><b><i>Info</i></b></a></li>
                     <!-- <li class="nav_link"><a href="#">Shop</a></li> -->
                     <!-- <li class="nav_link"><a href="#">Repos</a></li> -->
                 </ul>
