--- a/design-process.html
+++ b/design-process.html
@@ -1,6 +1,11 @@
 <html>
- 
-  
+<h1>My Design Adventure<h1>
+<br>
+ <p>
+ My design adventure went very well :) 
+ </p>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous">
+     <link rel="stylesheet" href="style.css">
   
   
   
