--- a/design.html
+++ b/design.html
@@ -39,9 +39,9 @@
 
     <section class="main">
         <img src="img/pfp.png" alt="" srcset="">
-        <span>Ethan Web</span>
-        <p>12 years old,  Web developer.</p>
-        <tt>About me not finished...</tt>
+        <span>Ethan's Website</span>
+        
+        <tt>Hi, Im Ethan</tt>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
