--- a/design.html
+++ b/design.html
@@ -41,7 +41,7 @@
         <img src="img/pfp.png" alt="" srcset="">
         <span>Ethan's Website</span>
         
-        <tt>Hi, Im Ethan</tt>
+        <tt>This is NOT the main page click the "Design Adventure" Button To see my journey!</tt>
         <ul>
             <li><a target="_blank" href="https://discord.gg/JuEeGweHrb"><i class="fab fa-discord"></i></a></li>
             <li><a target="_blank" href="https://github.com/EthanAnaya"><i class="fab fa-github"></i></a></li>
