--- a/design-process.html
+++ b/design-process.html
@@ -2,18 +2,19 @@
 <h1>My Design Adventure<h1>
 <br>
  <p>
- My design adventure went very well :) 
+ My design adventure went very well, or did it find out below?
  </p>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous">
-     <link rel="stylesheet" href="style.css">
  <style>
   h1 {
   text-align: center;
+  @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@1,200&display=swap');
 }
  p {
    text-align: bottom;
   }
   
+
+
  </style>
   
   
