--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <h1>Ethan Anaya's <br> About Me <h1>
 
  
- 
+
  
  
  
@@ -11,9 +11,13 @@
 h1 {
 font-family: 'Open Sans', sans-serif;
 font-family: 'Prompt', sans-serif; 
+ text-align: center;
  
  
   }
+body {
+  background-image: url('img_girl.jpg');
+}
  </style>
   
   
