--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ font-family: 'Prompt', sans-serif;
  
   }
 body {
-  background-image: url('img_girl.jpg');
+  background-image: url('/img/stars.jpg');
 }
  </style>
   
