--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
     <meta property="og:image" content="img/logo.png" />
-    <meta property="og:author" content="John Doe" />
+    <meta property="og:author" content="Ethan " />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
