--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
   <body>
     <div class="alert">
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    Beta Mode ~ errors may occour
+   Due To The High Volume of requests the unblocker may not work.
     </div>
     <header>
     <!-- Logo, Title and Description Codes Start -->
@@ -78,7 +78,7 @@
       </div>
       <div class="header_text flex_column_center">
         <h1>Ethan Anaya</h1>
-        <h2>🎉 This Website was Made by Ethan Anaya a 11 Year Old Kid! 🎉</h2>
+        <h2>🎉 This Website was Made by Ethan Anaya a 12 Year Old Kid! 🎉</h2>
 	<head>
       <link rel="stylesheet" href="index.css">
    </head>
@@ -212,7 +212,7 @@ displayTime();</script>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="error3O1.html" target="_blank" rel="nofollow">
+          <a class="main_small_a_item" href="ethananaya.github.io/password" target="_blank" rel="nofollow">
             <button class="main_small_button_item">Ultra-Violet-Proxy</button>
           </a>
           <a class="main_small_a_item" href="https://github.com/EthanAnaya/" target="_blank" rel="nofollow">
